# zephyr

boards/arm/mps3/: mps3_an547.dts  mps3_an547_ns.dts
modules/foo/: CMakeLists.txt  Kconfig
modules/pe-log/: CMakeLists.txt  Kconfig
modules/pe-math/: CMakeLists.txt  Kconfig
samples/cpp/hello_world/: CMakeLists.txt  prj.conf
samples/cpp/hello_world/src/: main.cpp
samples/hello_world/: CMakeLists.txt  prj.conf
samples/hello_world/src/: main.c
submanifests/: psocedge.yaml
